fix: ajustes para melhorar a visibilidade do conteúdo do app

--- a/src/global.scss
+++ b/src/global.scss
@@ -14,8 +14,6 @@
 :root {
   --black: #000;
   --white: #eee;
-  --ion-safe-area-top: env(safe-area-inset-top);
-  --ion-safe-area-bottom: env(safe-area-inset-bottom);
 }
 
 * {
@@ -32,10 +30,6 @@
   user-select: none;
 }
 
-ion-content {
-  --padding-top: var(--ion-safe-area-top);
-  --padding-bottom: var(--ion-safe-area-bottom);
-}
 
 body {
   background-color: #ffffff;
