--- a/src/pages/global/register/terms/terms.component.scss
+++ b/src/pages/global/register/terms/terms.component.scss
@@ -12,9 +12,10 @@ p, li {
 
 h4 {
   text-align: left;
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
-  font-size: 1.3rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 ul {
