--- a/src/shared/ui/templates/pages/form-page/form-page.component.scss
+++ b/src/shared/ui/templates/pages/form-page/form-page.component.scss
@@ -28,7 +28,7 @@ ion-content {
 
 .back-button {
   position: absolute;
-  top: 20px;
+  top: 35px;
   left: 20px;
   z-index: 10;
 }
@@ -40,7 +40,7 @@ ion-content {
 .header-section {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   margin-top: 70px;
   max-height: 80px;
 }
@@ -62,9 +62,7 @@ ion-content {
   background-color: white;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  padding-top: 20px;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 20px 0 40px;
   box-sizing: border-box;
   align-items: stretch;
 }
